<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/title" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@color/head" >

        <ImageView
            android:id="@+id/my_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:src="@drawable/head" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/my_icon"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="昵称 itachi"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="手机号：15649832116"
                android:textSize="15sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@color/head" />
    </RelativeLayout>

    <ImageView style="@style/divide" />
    <!-- 性别 -->

    <RelativeLayout
        android:id="@+id/sex"
        style="@style/my_item_layout" >

        <TextView
            android:id="@+id/t_sex"
            style="@style/my_item_tv"
            android:text="@string/my_sex" />

        <TextView
            android:id="@+id/info_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp" />
    </RelativeLayout>

    <ImageView style="@style/divide" />
    <!-- 年龄 -->

    <RelativeLayout
        android:id="@+id/age"
        style="@style/my_item_layout" >

        <TextView
            style="@style/my_item_tv"
            android:text="@string/my_age" />
    </RelativeLayout>

    <ImageView style="@style/divide" />
    <!-- 种植作物 -->

    <RelativeLayout
        android:id="@+id/plant"
        style="@style/my_item_layout" >

        <TextView
            style="@style/my_item_tv"
            android:text="@string/my_plant" />

        <TextView
            android:id="@+id/info_plant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp" />
    </RelativeLayout>

    <ImageView style="@style/divide" />
    <!-- 种植面积 -->

    <RelativeLayout
        android:id="@+id/area"
        style="@style/my_item_layout" >

        <TextView
            style="@style/my_item_tv"
            android:layout_toRightOf="@id/my_info_img"
            android:text="@string/my_area" />
    </RelativeLayout>

    <ImageView style="@style/divide" />

</LinearLayout>